--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Zihan Chen
 description: Zihan Chen's personal website.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/zchen24.github.io" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_repo: jekyll # the GitHub repo name for your project
 github_username: zchen24
